# churn-prediction

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.en.md  README.md  RELEASE_NOTES_v1.0.0.md  api.py  app.py  config.yaml  dashboard.py  main.py  predict_customer.py  prefect.yaml  pyproject.toml  requirements.txt  save_processed_data.py
.github/workflows/: ci.yml
.streamlit/: config.toml
apps/: __init__.py  api.py  streamlit_app.py
data/processed/: telco_churn_processed.csv
models/: LogisticRegression.joblib  model_metadata.json  preprocessor.joblib
monitoring/: drift_detection.py
notebooks/: 01_analise_exploratoria.ipynb  01_eda_analysis.ipynb
pages/: 1_Executive_Overview.py  2_Risk_and_Growth.py  3_Prioritization.py  4_Simulation.py
src/: config.py  dashboard_data.py  decisioning.py  ingestion.py  logging_utils.py  ml.py  monitoring.py  reporting.py  transformation.py  warehouse.py
src/cli/: __init__.py  pipeline.py  predict_customer.py  save_processed_data.py
src/contracts/: __init__.py  executive_metrics.py  report_schema.py
src/data/: make_dataset.py  preprocess.py
src/features/: build_features.py
src/modeling/: __init__.py  churn.py  pipeline.py  predictor.py  tuner.py
src/models/: __init__.py  predict_model.py  train_model.py  tune_model.py
tests/: test_dashboard_data.py  test_data.py  test_decisioning.py  test_drift_detection_script.py  test_enterprise_pipeline.py  test_features.py  test_models.py  test_monitoring.py  test_reporting_contract.py
utils/: animations.py  charts.py
