[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "churn-prediction-enterprise"
version = "0.1.0"
description = "Enterprise churn analytics and prediction pipeline"
requires-python = ">=3.12"

[project.scripts]
churn-pipeline = "src.cli.pipeline:main"
churn-predict = "src.cli.predict_customer:main"
churn-process-data = "src.cli.save_processed_data:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
